201-nsg-dmz-in-vnet/azuredeploy.json
{
    "$schema": "http://schema.management.azure.com/schemas/2014-04-01-preview/VNET.json",
    "contentVersion": "1.0.0.0",
    "parameters": 
    {
        "location": 
        {
            "type": "String",
            "defaultValue": "West US",
            "metadata": {
                "Description": "This is the region where the resources will be created"
                 }
        },
        "virtualNetworkName": 
        { 
            "type": "string",
            "defaultValue": "First_ARM_VNet",
            "metadata": {
                "Description": "This is your Virtual Network"
                 }
        }, 
        "addressPrefix": 
        { 
            "type": "string",
            "defaultValue": "10.0.0.0/16",
            "metadata": {
                "Description": "The CIDR address space for your Virtual Network in Azure"
                 }
        }, 
        "FESubnetName": {
            "type": "string",
            "defaultValue": "FESubnet",
            "metadata": {
                "Description": "This will be the name of your Front End Subnet. The DMZ Subnet."
                 }
        },
        "FESubnetPrefix": { 
            "type": "string",
            "defaultValue": "10.0.0.0/24",
            "metadata": {
                "Description": "This is CIDR prefix for the FrontEnd Subnet"
                 }
        }, 
        "AppSubnetName": {
            "type": "string",
            "defaultValue": "AppSubnet",
            "metadata": {
                "Description": "This will be the name of your Application Subnet"
                 }
        },
        "AppSubnetPrefix": { 
            "type": "string",
            "defaultValue": "10.0.1.0/24" ,
            "metadata": {
                "Description": "This is CIDR prefix for the Application Subnet"
                 }
        }, 
        "DBSubnetName": {
            "type": "string",
            "defaultValue": "DBSubnet",
            "metadata": {
                "Description": "This is the name of the Database Subnet"
                 }
        },
        "DBSubnetPrefix": { 
            "type": "string",
            "defaultValue": "10.0.2.0/24",
            "metadata": {
                "Description": "This is CIDR prefix for the Database Subnet"
                 }
        }, 
        "FENSGName": { 
            "type": "string",
            "defaultValue": "FE_NSG",
            "metadata": {
                "Description": "This is name of the networkSecurityGroup that will be assigned to FrontEnd Subnet"
                 }
        },
        "AppNSGName": {
            "type": "string",
            "defaultValue": "App_NSG",
            "metadata": {
                "Description": "This is name of the networkSecurityGroup that will be assigned to Application Subnet"
                 }
        },
        "DBNSGName": {
            "type": "string",
            "defaultValue": "DB_NSG",
            "metadata": {
                "Description": "This is name of the networkSecurityGroup that will be assigned to Database Subnet"
                 }
        }
   },
     
    "resources": 
    [
        {
        "apiVersion": "2014-12-01-preview",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('FENSGName')]",
        "location": "[parameters('location')]",

        "properties": 
        {
            "securityRules": [
            {
                "name": "rdp_rule",
                "properties": 
                {
                    "description": "Allow RDP",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3389",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                }
            },
            {
                "name": "web_rule",
                "properties": {
                    "description": "Allow WEB",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "80",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 101,
                    "direction": "Inbound"
                }
            }
            ]
        }
    }, 
    {
        "apiVersion": "2014-12-01-preview",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('AppNSGName')]",
        "location": "[parameters('location')]",

        "properties": {
            "securityRules": [{
                "name": "Allow_FE",
                "properties": {
                    "description": "Allow FE Subnet",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "443",
                    "sourceAddressPrefix": "10.0.0.0/24",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                }
            },
            {
                "name": "Block_RDP_Internet",
                "properties": {
                    "description": "Block RDP",
                    "protocol": "tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "3389",
                    "sourceAddressPrefix": "Internet",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 101,
                    "direction": "Inbound"
                }
            },
            {
                "name": "Block_Internet_Outbound",
                "properties": {
                    "description": "Block Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Deny",
                    "priority": 200,
                    "direction": "Outbound"
                }
                }]
        }
    },
    {
        "apiVersion": "2014-12-01-preview",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[parameters('DBNSGName')]",
        "location": "[parameters('location')]",

        "properties": {
            "securityRules": [{
                "name": "Allow_App",
                "properties": {
                    "description": "Allow APP Subnet",
                    "protocol": "Tcp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "1433",
                    "sourceAddressPrefix": "10.0.1.0/24",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 100,
                    "direction": "Inbound"
                }
            },
            {
                "name": "Block_FE",
                "properties": {
                    "description": "Block FE Subnet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "10.0.0.0/24",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 101,
                    "direction": "Inbound"
                }
            },
            {
                "name": "Block_App",
                "properties": {
                    "description": "Block App Subnet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "10.0.1.0/24",
                    "destinationAddressPrefix": "*",
                    "access": "Deny",
                    "priority": 102,
                    "direction": "Inbound"
                }
            },
            {
                "name": "Block_Internet",
                "properties": {
                    "description": "Block Internet",
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Deny",
                    "priority": 200,
                    "direction": "Outbound"
                }
                }]
        }
    },
    {
        "apiVersion": "2014-12-01-preview",
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[parameters('virtualNetworkName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
            "[concat('Microsoft.Network/networkSecurityGroups/', parameters('FENSGName'))]",
            "[concat('Microsoft.Network/networkSecurityGroups/', parameters('AppNSGName'))]",
            "[concat('Microsoft.Network/networkSecurityGroups/', parameters('DBNSGName'))]"
        ],
        "properties": {
            "addressSpace": {
                "addressPrefixes": [
                    "[parameters('addressPrefix')]"
                ]
            },
            "subnets": 
            [{
                "name": "[parameters('FESubnetName')]",
                "properties": {
                    "addressPrefix": "[parameters('FESubnetPrefix')]",
                    "networkSecurityGroup" : {
                      "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('FENSGName'))]"
                      }
                }
             },
             {
                "name": "[parameters('AppSubnetName')]",
                "properties": {
                    "addressPrefix": "[parameters('AppSubnetPrefix')]",
                 "networkSecurityGroup" : {
                      "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('AppNSGName'))]"   
                }
                }
            },
            {
                "name": "[parameters('DBSubnetName')]",
                "properties": {
                    "addressPrefix": "[parameters('DBSubnetPrefix')]",
                    "networkSecurityGroup" : {
                      "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('DBNSGName'))]"
                      }
                }
            }
            ]
        }
    }
    ]
}
